src/assets/styles.css
/* Register your custom font family and tell the browser where to find it. */
@font-face {
  font-family: "Inter";
  src: url("/fonts/Inter_18pt-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "JetBrainsMono";
  src: url("/fonts/JetBrainsMono-Regular.ttf") format("truetype");
}


:root {
  font-size: 16px;
  font-family: "Inter", sans-serif;
  /* font-family: sans-serif; */

  --background: rgba(20, 20, 20, 1);
  --background-secondary: rgba(25, 25, 25, 1);
  --background-accent: rgba(30, 30, 30, 1);
  --foreground: rgba(200, 200, 200, 1);
  --foreground-accent: rgba(220, 220, 220, 1);
  --foreground-ghost: rgba(100, 100, 100, .9);
  /* Choose some accent color later */
  --accent: rgba(0, 0, 0, 1);
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
  font-size: 1rem;
}

a {
  color: var(--foreground);
  text-decoration: none;
}

button {
  background: var(--background);
  color: var(--foreground);
}

body {
  overflow: auto;
  background: var(--background);
  color: var(--foreground);
}

.fade-on-scroll {
  animation: fadeOut linear;
  animation-timeline: view();
  animation-range: exit;
}

@keyframes fadeOut {
  to {
    opacity: 0;
    transform: translateY(80px);
  }
}

